# FUEL-JAX

./: .gitignore  README.md  jax2torch_lax.xlsx  pyproject.toml
config/llm/: deepseek.yaml
dataset/: design.md  jax2torch_lax.csv  jax2torch_map.csv  jax2torch_none.csv  jax2torch_todo.csv  jax_rules.yaml  op_rules.yaml
dataset/jax/: lax.txt
dataset/pytorch/: lax_.txt
experiment/: JAX Operator Precision Validation Report.md  JAX_PyTorch_Precision.md  VALIDATE.md  difftesting.py  gpu.yaml  op_test.ipynb  tpu.yaml
fuel_jax/: __init__.py  config.py  executor.py  fuzzing_inputs.py  llm_client.py  main.py  precision_checker.py  reporter.py  test_generator.py
fuel_jax/config/: config.py
fuel_jax/core/: __init__.py  orchestrator.py
fuel_jax/difftesting/: check.py  exec.py  oracle.py  validate.py
fuel_jax/execution/: __init__.py  executor.py  precision_checker.py
fuel_jax/generation/: __init__.py  test_generator.py
fuel_jax/generator/: generate.py  mutate.py
fuel_jax/io/: __init__.py  csv_reader.py  reporter.py
fuel_jax/llm/: __init__.py  client.py
fuel_jax/script/: jax_script.py  jax_script_cpu.py  torch_script.py
fuel_jax/utils/: __init__.py  utils.py
op_test/: test_dot.ipynb  test_dot_tpu.ipynb  test_jax.lax.cumlogexp.ipynb  test_jax.lax.exp2.ipynb  test_jax.lax.integer_pow.ipynb  test_jax.lax.polygamma.ipynb  test_jax.lax.round.ipynb  test_linalg.ipynb
output/: .progress.json  summary.md
scripts/: demo_read_jax_rules.py
test/: explore.ipynb  generate.ipynb  test_llm.py  test_op.ipynb  test_op.py  test_op_1.py  test_op_2.py
(+98 files in other folders)
