[project]
name = "fuel-jax"
version = "0.1.0"
description = "A JAX-based fuzzing tool for TPU/GPU environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "typer>=0.21.1",
]
[project.optional-dependencies]
tpu = [
    "jax[tpu]",
    "libtpu==0.0.30",
    "torch",
]
cuda = [
    "jax[cuda]",
    "torch",
]
cpu = [
    "jax",
    "torch",
]